--- a/style.css
+++ b/style.css
@@ -2,6 +2,16 @@
 html {
   box-sizing: border-box;
 }
+.visually-hid {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 .page {
   margin: 0;
@@ -54,15 +64,77 @@ a {
   background-color: rgba(102, 61, 21, 1);
 }
 
+.header {
+  margin-bottom: 75px;
+}
+.inner .header {
+  margin-bottom: 50px;
+
+  background-color: rgba(0, 0, 0, 1);
+  /* Временно для сетки */
+  min-height: 70px;
+  /* Временно для сетки */
+}
+.logo {
+  order: 2;
+  width: 368px;
+  height: 153px;
+}
+.inner .logo {
+  order: 0;
+  width: 111px;
+  height: 24px;
+  padding: 23px 20px;
+}
 .main-nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
   font-size: 16px;
   line-height: 20px;
   color: rgba(255, 255, 255, 1);
 
+  background-color: transparent;
+}
+.inner .main-nav {
+  flex-direction: row;
+  align-items: flex-start;
+  /* Временно для сетки */
+  min-height: 70px;
+  /* Временно для сетки */
+}
+.main-nav-wrapper {
+  width: 100%;
+  margin-bottom: 60px;
+
   background-color: rgba(0, 0, 0, 1);
+
+}
+.main-nav-wrapper .container {
+  display: flex;
+  justify-content: space-between;
+}
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+.site-nav {
+  width: 620px;
+}
+.user-nav {
+  width: 140px;
+}
+.inner .user-nav {
+  margin-left: auto;
 }
 .site-nav,
 .user-nav {
+  margin: 0;
+  padding: 0;
+
   list-style: none;
 }
 .site-nav a,
@@ -76,12 +148,106 @@ a {
   background-color: rgba(36, 36, 36, 1);
 }
 
+.features {
+  margin-bottom: 80px;
+}
+.features-list {
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+.features-item {
+  width: 300px;
+
+  text-align: center;
+}
+.features-item h3 {
+  font-size: 30px;
+  line-height: 42px;
+}
+
+.index-columns {
+  display: flex;
+  justify-content: space-between;
+  padding: 50px 80px;
+  margin-bottom: 35px;
+  color: rgba(0, 0, 0, 1);
+
+  background-color: rgba(248, 245, 242, 1);
+  background-image: url("img/bg-texture.jpg");
+  background-position: 0 0;
+  background-repeat: repeat;
+}
+.news {
+  width: 380px;
+}
+.gallery {
+  width: 300px;
+}
+.news-list {
+  list-style: none;
+}
+.news-item time {
+  text-transform: none;
+}
+.gallery-list {
+  list-style: none;
+}
+.mid-image,
+.gallery-item a {
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+}
+.gallery-item a:hover,
+.gallery-item a:focus {
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+}
+.gallery-content {
+  background-color: rgba(204, 204, 204, 1);
+  border: 7px solid rgba(255, 255, 255, 1);
+}
+
+.contacts {
+  width: 380px;
+}
+.appointment {
+  width: 300px;
+}
+.appoint-field {
+  font: inherit;
+
+  background-color: transparent;
+  border: 2px solid rgba(0, 0, 0, 1);
+}
+.appoint-field:focus {
+  border-color: rgba(102, 61, 21, 1);
+}
+
 .headline-main {
+  margin: 0;
+  margin-bottom: 15px;
+  padding: 0;
+
+  /* Временно для сетки */
+  min-height: 42px;
+  /* Временно для сетки */
+
   font-size: 30px;
   line-height: 42px;
 }
 
 .breadcrumbs {
+  margin: 0;
+  margin-bottom: 50px;
+  padding: 0;
+
+  /* Временно для сетки */
+  min-height: 24px;
+  /* Временно для сетки */
+
   list-style: none;
 }
 .breadcrumbs-link {
@@ -98,7 +264,20 @@ a {
 .breadcrumbs-current:focus {
   color: rgba(171, 169, 167, 1);
 }
+.catalog {
+  display: flex;
+  justify-content: space-between;
+}
+.filters {
+  width: 180px;
 
+  /* Временно для сетки */
+  min-height: 687px;
+  /* Временно для сетки */
+}
+.filters-field {
+  border: none;
+}
 .filters-label {
   color: rgba(0, 0, 0, 1);
 }
@@ -111,40 +290,66 @@ a {
   color: rgba(176, 174, 171, 1);
 }
 
-.features-list {
-  list-style: none;
-}
-.features-item {
-  text-align: center;
-}
-.features-item h3 {
-  font-size: 30px;
-  line-height: 42px;
-}
+.goods {
+  width: 700px;
 
+  /* Временно для сетки */
+  min-height: 687px;
+  /* Временно для сетки */
+}
 .goods-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  margin-bottom: 25px;
+  padding: 0;
+
   list-style: none;
 }
 .goods-item {
-  width: 300px;
+  width: 220px;
+  margin-bottom: 20px;
+  margin-right: 20px;
 
-  background-color: rgba(255, 255, 255, 1);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  /* Временно для сетки */
+  min-height: 285px;
+  /* Временно для сетки */
+
+  background-color: rgba(248, 248, 248, 1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.goods-item:nth-child(3n) {
+  margin-right: 0;
 }
 .goods-item:hover {
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
-.item-image a {
+.item-link {
   color: rgba(0, 0, 0, 1);
 }
-.item-image a:hover,
-.item-image a:focus {
+.item-link:hover,
+.item-link:focus {
   color: rgba(102, 61, 21, 1);
 }
-.item-price p {
+.item-link h3 {
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: none;
+}
+.upper-text {
+  text-transform: uppercase;
+}
+.item-price b {
   background-color: rgba(229, 229, 229, 1);
 }
 .goods-nav {
+  margin: 0;
+  padding: 0;
+
+  /* Временно для сетки */
+  min-height: 47px;
+  /* Временно для сетки */
+
   list-style: none;
 }
 .goods-nav a {
@@ -162,51 +367,57 @@ a {
   background-color: rgba(255, 255, 255, 1);
 }
 
-.gallery-list {
-  list-style: none;
+.item-container {
+  display: flex;
+  justify-content: space-between;
 }
-.mid-image,
-.gallery-item a {
-  background-color: rgba(255, 255, 255, 1);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+.item-gallery {
+  width: 460px;
+
+  /* Временно для сетки */
+  min-height: 677px;
+  /* Временно для сетки */
 }
-.gallery-item a:hover,
-.gallery-item a:focus {
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+.mid-image img {
+  width: 100%;
+  height: auto;
+}
+.item-desc {
+  width: 390px;
+
+  /* Временно для сетки */
+  min-height: 677px;
+  /* Временно для сетки */
 }
 
-.index-columns {
-  color: rgba(0, 0, 0, 1);
-
-  background-color: rgba(248, 245, 242, 1);
-  background-image: url("img/bg-texture.jpg");
-  background-position: 0 0;
-  background-repeat: repeat;
+.promo-text {
+  font-size: 48px;
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 48px;
 }
-
-.news-list {
-  list-style: none;
+.price .headline {
+  font-size: 24px;
+  line-height: 30px;
 }
-.news-item time {
-  text-transform: none;
+.content-column {
+  display: flex;
+  flex-wrap: wrap;
 }
-
-.gallery-content {
-  background-color: rgba(204, 204, 204, 1);
-  border: 7px solid rgba(255, 255, 255, 1);
+.column {
+  width: 450px;
+  margin-right: 20px;
 }
-
-.appoint-field {
-  font: inherit;
-
-  background-color: transparent;
-  border: 2px solid rgba(0, 0, 0, 1);
+.column:nth-child(2n) {
+  margin-right: 0;
 }
-.appoint-field:focus {
-  border-color: rgba(102, 61, 21, 1);
+.promo-desc {
+  margin-top: auto;
 }
 
 .footer {
+  margin-top: 65px;
+  padding: 60px 0;
   color: rgba(255, 255, 255, 1);
 
   background-color: #212121;
@@ -214,7 +425,17 @@ a {
   background-position: 0 0;
   background-repeat: repeat;
 }
-
+.inner .footer {
+  margin-top: 45px;
+}
+.footer .container {
+  display: flex;
+}
+.footer-contacts {
+  width: 320px;
+  margin: 0;
+  margin-right: 80px;
+}
 .map-link {
   color: rgba(255, 255, 255, 1);
   text-decoration: underline;
@@ -225,6 +446,7 @@ a {
 }
 
 .footer-social {
+  width: 145px;
   text-align: center;
 }
 .footer-social ul {
@@ -235,6 +457,8 @@ a {
 }
 
 .footer-copyright {
+  width: 150px;
+  margin-left: auto;
   text-align: center;
 }
 .copyright-btn:hover,
