--- a/style.css
+++ b/style.css
@@ -1,16 +1,27 @@
-*,
+/* *,
 html {
   box-sizing: border-box;
-}
-.visually-hid {
+} */
+.visually-hid:not(:focus):not(:active),
+input[type="checkbox"].visually-hid,
+input[type="radio"].visually-hid {
   position: absolute;
+
   width: 1px;
   height: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
+
+  white-space: nowrap;
+
+  clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 .page {
@@ -30,9 +41,9 @@ html {
   background-repeat: no-repeat;
 }
 .page.inner {
-  color: #000000;
+  color: rgba(0, 0, 0, 1);
 
-  background-color: #f9f6f3;
+  background-color: rgba(249, 246, 243, 1);
   background-image: url("img/bg-texture.jpg");
   background-position: 0 0;
   background-repeat: repeat;
@@ -48,6 +59,10 @@ a {
 }
 
 .btn {
+  display: inline-block;
+  margin-right: 16px;
+  padding: 10px 30px;
+
   font: inherit;
 
   text-align: center;
@@ -57,11 +72,18 @@ a {
 
   background-color: rgba(0, 0, 0, 1);
   border: none;
+  cursor: pointer;
 }
 .btn:hover,
 .btn:focus,
 .btn:active {
   background-color: rgba(102, 61, 21, 1);
+}
+.btn.disabled,
+.btn:disabled {
+  cursor: default;
+  opacity: 0.5;
+  background-color: rgba(0, 0, 0, 1);
 }
 
 .header {
@@ -71,9 +93,6 @@ a {
   margin-bottom: 50px;
 
   background-color: rgba(0, 0, 0, 1);
-  /* Временно для сетки */
-  min-height: 70px;
-  /* Временно для сетки */
 }
 .logo {
   order: 2;
@@ -101,9 +120,6 @@ a {
 .inner .main-nav {
   flex-direction: row;
   align-items: flex-start;
-  /* Временно для сетки */
-  min-height: 70px;
-  /* Временно для сетки */
 }
 .main-nav-wrapper {
   width: 100%;
@@ -122,10 +138,13 @@ a {
   padding: 0 10px;
 }
 .site-nav {
+  display: flex;
+  flex-wrap: wrap;
   width: 620px;
 }
 .user-nav {
-  width: 140px;
+  display: flex;
+  max-width: 140px;
 }
 .inner .user-nav {
   margin-left: auto;
@@ -139,6 +158,9 @@ a {
 }
 .site-nav a,
 .user-nav a {
+  display: block;
+  padding: 25px 20px;
+
   color: rgba(255, 255, 255, 1);
 }
 .site-nav a:hover,
@@ -146,6 +168,29 @@ a {
 .user-nav a:hover,
 .user-nav a:focus {
   background-color: rgba(36, 36, 36, 1);
+}
+.user-nav .login-link {
+  position: relative;
+  padding-left: 50px;
+}
+.login-link::before {
+  content: "";
+
+  position: absolute;
+  top: 27px;
+  left: 24px;
+  width: 16px;
+  height: 18px;
+
+  background-image: url("img/login.svg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  opacity: 0.3;
+}
+.login-link:hover::before,
+.login-link:focus::before,
+.login-link:active::before {
+  opacity: 1;
 }
 
 .features {
@@ -165,8 +210,28 @@ a {
   text-align: center;
 }
 .features-item h3 {
+  position: relative;
+  margin: 0;
+  margin-bottom: 60px;
+
   font-size: 30px;
   line-height: 42px;
+}
+.features-item h3::before {
+  content: "";
+
+  position: absolute;
+  bottom: -30px;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-left: -10px;
+  
+  background-color: rgba(255, 255, 255, 1);
+  transform: rotate(45deg);
+}
+.features-item p {
+  margin: 0 10px;
 }
 
 .index-columns {
@@ -177,9 +242,14 @@ a {
   color: rgba(0, 0, 0, 1);
 
   background-color: rgba(248, 245, 242, 1);
-  background-image: url("img/bg-texture.jpg");
-  background-position: 0 0;
-  background-repeat: repeat;
+  background-image: url("img/line.png"),
+                    url("img/bg-texture.jpg");
+  background-position: center, 0 0;
+  background-repeat: no-repeat, repeat;
+}
+.index-columns .headline {
+  margin: 0;
+  margin-bottom: 25px;
 }
 .news {
   width: 380px;
@@ -188,42 +258,104 @@ a {
   width: 300px;
 }
 .news-list {
+  margin: 0;
+  margin-bottom: 25px;
+  padding: 0;
+
   list-style: none;
+}
+.news-item {
+  margin-bottom: 25px;
+}
+.news-item p {
+  margin: 0;
 }
 .news-item time {
   text-transform: none;
 }
-.gallery-list {
-  list-style: none;
-}
-.mid-image,
-.gallery-item a {
-  background-color: rgba(255, 255, 255, 1);
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-}
-.gallery-item a:hover,
-.gallery-item a:focus {
-  box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
+.gallery-container {
+  position: relative;
+
+  height: 260px;
 }
 .gallery-content {
+  width: 286px;
+  height: 164px;
+  margin: 0;
+
   background-color: rgba(204, 204, 204, 1);
   border: 7px solid rgba(255, 255, 255, 1);
+}
+.gallery-content img {
+  height: 100%;
+  object-fit: cover;
+}
+.gallery-btn {
+  position: absolute;
+  bottom: 0;
+
+  width: 140px;
+  margin: 0;
+
+  box-sizing: border-box;
+}
+.gallery-btn-back {
+  left: 0;
+}
+.gallery-btn-next {
+  right: 0;
 }
 
 .contacts {
   width: 380px;
 }
+.contacts p {
+  margin: 0;
+  margin-bottom: 25px;
+}
 .appointment {
   width: 300px;
 }
+.appointment-info {
+  margin: 0;
+  margin-bottom: 15px;
+}
+.appoint-form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.appoint-paragraph {
+  width: 140px;
+  margin: 0;
+  margin-bottom: 10px;
+}
+.appoint-headline {
+  display: block;
+  margin-bottom: 9px;
+  margin-left: 15px;
+}
 .appoint-field {
+  width: 140px;
+  padding-top: 8px;
+  padding-right: 15px;
+  padding-bottom: 7px;
+  padding-left: 15px;
+
   font: inherit;
 
   background-color: transparent;
   border: 2px solid rgba(0, 0, 0, 1);
+  box-sizing: border-box;
 }
 .appoint-field:focus {
   border-color: rgba(102, 61, 21, 1);
+}
+.appoint-btn {
+  display: block;
+  width: 100%;
+  margin-top: 10px;
+  margin-right: 0;
 }
 
 .headline-main {
@@ -231,24 +363,39 @@ a {
   margin-bottom: 15px;
   padding: 0;
 
-  /* Временно для сетки */
-  min-height: 42px;
-  /* Временно для сетки */
-
   font-size: 30px;
   line-height: 42px;
 }
 
 .breadcrumbs {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   margin: 0;
   margin-bottom: 50px;
   padding: 0;
 
-  /* Временно для сетки */
-  min-height: 24px;
-  /* Временно для сетки */
-
   list-style: none;
+}
+.breadcrumbs li {
+  position: relative;
+
+  margin-right: 42px;
+}
+.breadcrumbs li:last-child {
+  margin-right: 0;
+}
+.breadcrumbs li::after {
+  content: "";
+
+  position: absolute;
+  top: 7px;
+  right: -25px;
+  width: 8px;
+  height: 8px;
+
+  background-color: rgba(0, 0, 0, 1);
+  transform: rotate(45deg);
 }
 .breadcrumbs-link {
   color: rgba(0, 0, 0, 1);
@@ -260,6 +407,9 @@ a {
 .breadcrumbs-current {
   color: rgba(171, 169, 167, 1);
 }
+.breadcrumbs-current::after {
+  display: none;
+}
 .breadcrumbs-current:hover,
 .breadcrumbs-current:focus {
   color: rgba(171, 169, 167, 1);
@@ -270,16 +420,89 @@ a {
 }
 .filters {
   width: 180px;
-
-  /* Временно для сетки */
-  min-height: 687px;
-  /* Временно для сетки */
 }
 .filters-field {
+  margin: 0;
+  margin-bottom: 30px;
+  padding: 0;
+
   border: none;
 }
+.filters-brands {
+  margin-bottom: 35px;
+}
+.filters-field legend {
+  margin-bottom: 26px;
+
+  font-size: 24px;
+  line-height: 30px;
+}
+.filters-field ul {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+  line-height: 18px;
+}
+.filters-paragraph {
+  margin-bottom: 19px;
+  padding-left: 45px;
+}
 .filters-label {
+  position: relative;
+
+  display: block;
+
   color: rgba(0, 0, 0, 1);
+
+  cursor: pointer;
+  user-select: none;
+}
+.filters-label-check::before {
+  content: "";
+
+  position: absolute;
+  top: 0;
+  left: -42px;
+  width: 16px;
+  height: 16px;
+  border: 2px solid rgba(0, 0, 0, 1);
+}
+.filters-trigger:checked + .filters-label-check::after {
+  content: "";
+
+  position: absolute;
+  top: 4px;
+  left: -38px;
+  width: 12px;
+  height: 12px;
+
+  background-image: url("img/cross.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+.filters-label-radio::before {
+  content: "";
+
+  position: absolute;
+  top: -1px;
+  left: -42px;
+  width: 16px;
+  height: 16px;
+  border: 2px solid rgba(0, 0, 0, 1);
+  border-radius: 50%;
+}
+.filters-trigger:checked + .filters-label-radio::after {
+  content: "";
+
+  position: absolute;
+  top: 5px;
+  left: -36px;
+  width: 8px;
+  height: 8px;
+
+  background-color: rgba(0, 0, 0, 1);
+  border-radius: 50%;
 }
 .filters-label:hover,
 .filters-trigger:hover + .filters-label,
@@ -292,10 +515,6 @@ a {
 
 .goods {
   width: 700px;
-
-  /* Временно для сетки */
-  min-height: 687px;
-  /* Временно для сетки */
 }
 .goods-list {
   display: flex;
@@ -311,10 +530,6 @@ a {
   margin-bottom: 20px;
   margin-right: 20px;
 
-  /* Временно для сетки */
-  min-height: 285px;
-  /* Временно для сетки */
-
   background-color: rgba(248, 248, 248, 1);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -325,6 +540,9 @@ a {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 .item-link {
+  display: flex;
+  flex-direction: column;
+
   color: rgba(0, 0, 0, 1);
 }
 .item-link:hover,
@@ -332,27 +550,74 @@ a {
   color: rgba(102, 61, 21, 1);
 }
 .item-link h3 {
+  order: 1;
+  margin-top: 17px;
+  margin-right: 15px;
+  margin-bottom: 12px;
+  margin-left: 16px;
+
   font-size: 14px;
   font-weight: bold;
+  line-height: 18px;
   text-transform: none;
 }
-.upper-text {
+.item-link span {
+  display: block;
+
+  text-transform: none;
+}
+.item-link .upper-text {
+  display: inline;
+
   text-transform: uppercase;
 }
-.item-price b {
-  background-color: rgba(229, 229, 229, 1);
+.item-image {
+  width: 220px;
+  height: 165px;
+  margin: 0;
 }
+.item-price {
+  display: flex;
+  margin: 15px;
+  margin-top: 0;
+}
+.item-price b {
+  width: 112px;
+  padding: 13px 25px 11px;
+
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+
+  background-color: rgba(229, 229, 229, 1);
+  box-sizing: border-box;
+}
+.buy-btn {
+  width: 50px;
+  padding: 13px 18px 11px;
+  margin-right: 0;
+
+  line-height: 20px;
+}
+
 .goods-nav {
+  display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
 
-  /* Временно для сетки */
-  min-height: 47px;
-  /* Временно для сетки */
-
   list-style: none;
 }
+.goods-nav li {
+  margin-right: 5px;
+}
+.goods-nav li:last-child {
+  margin-right: 0;
+}
 .goods-nav a {
+  display: block;
+  padding: 10px 19px;
+
   color: rgba(255, 255, 255, 1);
 
   background-color: rgba(0, 0, 0, 1);
@@ -366,39 +631,158 @@ a {
 
   background-color: rgba(255, 255, 255, 1);
 }
+.goods-nav .goods-nav-current:hover,
+.goods-nav .goods-nav-current:focus {
+  color: rgba(0, 0, 0, 1);
+
+  background-color: rgba(255, 255, 255, 1);
+  cursor: default;
+}
 
 .item-container {
   display: flex;
   justify-content: space-between;
 }
-.item-gallery {
+.product-gallery {
   width: 460px;
+}
+.product-gallery-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
 
-  /* Временно для сетки */
-  min-height: 677px;
-  /* Временно для сетки */
+  list-style: none;
+}
+.product-gallery-item {
+  width: 140px;
+  height: 149px;
+  margin-right: 20px;
+
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+.product-gallery-item:nth-child(3n) {
+  margin-right: 0;
 }
 .mid-image img {
   width: 100%;
   height: auto;
 }
-.item-desc {
-  width: 390px;
+.mid-image {
+  width: 460px;
+  height: 498px;
+  margin: 0;
+  margin-bottom: 20px;
 
-  /* Временно для сетки */
-  min-height: 677px;
-  /* Временно для сетки */
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+.product-gallery-item:hover,
+.product-gallery-item:focus {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+.item-desc {
+  width: 390px;
+  padding-top: 20px;
+}
+.item-desc p {
+  margin: 0;
+}
+.availability {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 10px;
+  margin-bottom: 29px;
+}
+.availability p {
+  width: 200px;
+}
+.availability p:last-child {
+  text-align: right;
+  color: rgba(174, 174, 174, 1);
+}
+.item-desc .item-price {
+  margin-bottom: 63px;
+}
+.item-desc b {
+  padding: 13px 36px 11px;
+}
+.item-desc .buy-btn {
+  padding-left: 17px;
+  padding-right: 17px;
+}
+.item-desc .text {
+  margin-bottom: 35px;
+}
+.item-desc h3 {
+  margin: 0;
+  margin-bottom: 27px;
+
+  font-size: 24px;
+  line-height: 30px;
+}
+.item-equip-list {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+.item-equip-list li {
+  position: relative;
+
+  padding-left: 23px;
+}
+.item-equip-list li::before {
+  content: "";
+  
+  position: absolute;
+  top: 7px;
+  left: 2px;
+  
+  width: 8px;
+  height: 8px;
+  
+  background-color: rgba(0, 0, 0, 1);
+  
+  transform: rotate(45deg);
+}
+
+.price .headline {
+  width: 240px;
+  margin: 0;
+  margin-bottom: 35px;
+
+  font-size: 24px;
+  line-height: 30px;
+}
 .promo-text {
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 75px;
+
   font-size: 48px;
   font-weight: bold;
+  text-align: center;
   text-transform: uppercase;
   line-height: 48px;
 }
-.price .headline {
-  font-size: 24px;
-  line-height: 30px;
+.promo-text::before,
+.promo-text::after {
+  content: "";
+
+  position: absolute;
+  top: 50%;
+  width: 164px;
+  height: 2px;
+  margin-top: -1px;
+
+  background-color: rgba(0, 0, 0, 1);
+}
+.promo-text::before {
+  left: 0;
+}
+.promo-text::after {
+  right: 0;
 }
 .content-column {
   display: flex;
@@ -407,12 +791,66 @@ a {
 .column {
   width: 450px;
   margin-right: 20px;
+  margin-bottom: 65px;
 }
 .column:nth-child(2n) {
   margin-right: 0;
 }
+.column:nth-last-child(1),
+.column:nth-last-child(2) {
+  margin-bottom: 0;
+}
+.our-partners-list {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
+.our-partners-list li {
+  position: relative;
+  margin-bottom: 22px;
+  padding-left: 22px;
+}
+.our-partners-list li:last-child {
+  margin-bottom: 0;
+}
+.our-partners-list li::before {
+  content: "";
+
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  margin-top: -5px;
+
+  background-color: rgba(0, 0, 0, 1);
+  transform: rotate(45deg);
+}
+.price-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.row td {
+  width: 50%;
+  padding: 11px 17px;
+
+  border: 2px solid rgba(0, 0, 0, 1);
+}
+.row td:first-child {
+  text-align: left;
+}
+.row td:last-child {
+  text-align: center;
+}
+.about-us p {
+  width: 390px;
+}
 .promo-desc {
   margin-top: auto;
+}
+.promo-desc p {
+  width: 370px;
 }
 
 .footer {
@@ -420,7 +858,7 @@ a {
   padding: 60px 0;
   color: rgba(255, 255, 255, 1);
 
-  background-color: #212121;
+  background-color: rgba(33, 33, 33, 1);
   background-image: url("img/bg-texture1.jpg");
   background-position: 0 0;
   background-repeat: repeat;
@@ -449,17 +887,52 @@ a {
   width: 145px;
   text-align: center;
 }
+.footer-social b {
+  display: block;
+  margin-bottom: 15px;
+}
 .footer-social ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 141px;
+  margin: 0 auto;
+  padding: 0;
+
   list-style: none;
 }
 .social-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 43px;
+  height: 43px;
+
   color: rgba(255, 255, 255, 1);
+  background-color: rgba(0, 0, 0, 1);
+}
+.social-btn:hover,
+.social-btn:focus {
+  background-color: rgba(255, 255, 255, 1);
+}
+.social-btn:hover path,
+.social-btn:focus path {
+  fill: rgba(0, 0, 0, 1);
 }
 
 .footer-copyright {
   width: 150px;
+  margin: 0;
   margin-left: auto;
   text-align: center;
+}
+.footer-copyright b {
+  display: block;
+  margin-bottom: 15px;
+}
+.copyright-btn {
+  display: block;
+  margin-right: 0;
 }
 .copyright-btn:hover,
 .copyright-btn:focus {
